--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
+    "mongodb": "^4.8.1",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
