--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bolytalk",
+  "name": "bollytalk",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
+    "bcrypt": "^5.0.1",
     "mongodb": "^4.8.1",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
+    "node-gyp": "^9.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.2"
